fix: remove z-index from header

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -245,15 +245,10 @@ h6 {
 /* header */
 .header {
   background: #fff 0% 0% no-repeat padding-box;
-
-  z-index: 9;
   width: 100%;
   transition: all 0.2s ease-in-out;
 }
 
-/*.header:hover{
-    box-shadow:  0px 3px 6px #00000029;
-}*/
 .sticky-bar {
   background: #fff;
 }
